Create cart demo page

--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,3 +1,6 @@
-h1.svelte-i7qo5m{color:purple}
+div.svelte-etinwd{margin:1rem;box-shadow:0 2px 8px rgba(0, 0, 0, 0.26);padding:1rem;border-radius:5px;background:white}h1.svelte-etinwd{font-size:1.25rem;margin:0.25rem 0}h2.svelte-etinwd{font-size:1rem;margin:0.25rem 0;color:#4b4b4b}p.svelte-etinwd{margin:0.25rem 0}
+section.svelte-7gbwjl{width:30rem;margin:auto}label.svelte-7gbwjl,input.svelte-7gbwjl{width:100%}
+button.svelte-14c2swk{font:inherit;padding:0.15rem 0.5rem;background:#d10057;border:1px solid #d10057;color:white;cursor:pointer}button.svelte-14c2swk:hover,button.svelte-14c2swk:active{box-shadow:1px 1px 6px rgba(0, 0, 0, 0.26)}
+ul.svelte-3qa7u7{list-style:none;padding:0;margin:1rem}li.svelte-3qa7u7{margin:0.5rem 0;padding:0.5rem;border:1px solid #ccc}h1.svelte-3qa7u7{font-size:1.5rem;margin:1rem}
 
 /*# sourceMappingURL=bundle.css.map */
